syntax = "proto3";
import "util.proto";

option java_multiple_files = true;
option java_package = "com.saber.spring_grpc_server.proto";

message BookRequest {
  string  bookId = 1;
}
message BookResponse {
  string  bookId = 1;
  string  name = 2;
  constants.Type type = 3;
}

service BookService {
  rpc getBook(BookRequest) returns (BookResponse) {};
}